@@ -28,6 +28,8 @@ Core and Builtins
 
 - Issue #1583863: An str subclass can now override the __str__ method
 
+- Issue #7072: isspace(0xa0) is true on Mac OS X
+
 Library
 -------
 
